Refactored date pipe, fixed 'no thank you' text wrapping Changed logic of assign user achievement request

--- a/src/modules/+dashboard/components/thank-you/thank-you.component.scss
+++ b/src/modules/+dashboard/components/thank-you/thank-you.component.scss
@@ -74,6 +74,7 @@
     justify-content: center;
     font-size: 3vmin;
     text-align: center;
+    white-space: pre-wrap;
   }
 }
 
